Update heading and paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <h1>Hello Iris 👋</h1>
-    <p>Welcome to your first web app!</p>
+    <h1>This is first web app POC of the cost calculator </h1>
+    <p>Welcome!</p>
   </body>
 </html>
